# rigging

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  spec.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/results/: v0-reference-smoke.md  v0-reference.md
benchmarks/rig_bench/: __init__.py  harness.py  run.py
benchmarks/rig_bench/axes/: blame.py  cost.py  expressiveness.py  fidelity.py  identity.py
docs/: EXAMPLES.md  FAQ.md  architecture.md  audit-2026-05-15.md  case-studies.md  demo-script.md  glossary.md  postmortem-v0.md  related-work.md  roadmap.md
docs/adr/: 0000-template.md  0001-python-only-for-v0.md  0002-pydantic-v2-over-dataclasses.md  0003-anyio-over-asyncio.md  0004-opentelemetry-trace-substrate.md  0005-ed25519-over-ecdsa-rsa.md  0006-explicit-budget-propagation.md  0007-verifier-as-agent.md  0008-agent-cards-vs-mcp-descriptors.md  0009-no-silent-retries.md  0010-ulid-for-contract-ids.md
docs/benchmarks/: rigging-completeness-matrix.md
docs/phase-reviews/: phase-1-review.md  phase-2-review.md  think.md
docs/spec/: agent-card-v0.md  identity-v0.md  rig-contract-v0.md  trace-v0.md
examples/: _shared.py
examples/01_two_agent_handoff/: README.md  run.py
examples/02_three_vendor_rig/: README.md  run.py
examples/03_adversarial_subagent/: README.md  run.py
examples/04_cost_attribution/: README.md  run.py
examples/05_vote_ensemble/: README.md  run.py
examples/06_recursive_verification/: README.md  __init__.py  run.py
scripts/: audit_links.py  check_svg.py
site/: cheatsheet.html  index.html  script.js  styles.css
tests/: conftest.py  smoke.py
tests/integration/: test_cli_extensions.py  test_example_06.py  test_rig_end_to_end.py  test_runtime_features.py
tests/property/: test_blame_properties.py  test_budget_properties.py  test_contract_roundtrip.py  test_jcs_properties.py
tests/unit/: test_agent_card.py  test_budget.py  test_contract.py  test_diagnostics.py  test_identity.py  test_jcs.py
