[project]
name = "rigging"
version = "0.1.0"
description = "Typed, trust-bearing, schema-mediated coupling layer for harnessed agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "The Rigging Authors" }]
keywords = ["agents", "mcp", "a2a", "harness", "multi-agent", "rigging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.6",
    "anyio>=4.3",
    "cryptography>=42.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
adapters = ["litellm>=1.84.0"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.99",
    "pytest-anyio>=0.0.0",
    "anyio[trio]>=4.3",
    "mypy>=1.10",
    "pyright>=1.1.360",
    "ruff>=0.4",
]

[project.scripts]
rig = "rigging.cli:app"

[project.urls]
Homepage = "https://github.com/bettyguo/rigging"
Documentation = "https://github.com/bettyguo/rigging/blob/main/CONCEPT.md"
Issues = "https://github.com/bettyguo/rigging/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/rigging-core/src/rigging",
    "packages/rigging-runtime/src/rigging",
    "packages/rigging-identity/src/rigging",
    "packages/rigging-trace/src/rigging",
    "packages/rigging-adapters/src/rigging",
]

[tool.uv.workspace]
members = [
    "packages/rigging-core",
    "packages/rigging-runtime",
    "packages/rigging-identity",
    "packages/rigging-trace",
    "packages/rigging-adapters",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "N802"]
"examples/**" = ["ANN", "N802"]
"benchmarks/**" = ["ANN", "N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "benchmarks.*", "examples.*"]
disallow_untyped_defs = false

[tool.pyright]
include = ["packages/*/src", "tests", "benchmarks", "examples"]
pythonVersion = "3.12"
strict = ["packages/*/src/**"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --tb=short"
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
    "property: hypothesis property-based tests",
]
